src/tests/errors/lexer/005.ura
// parse_errors/005 — `use` missing opening quote
use @/header

main():
    output("hi\n")